fix horizontal overflow

--- a/Sass/messages.scss
+++ b/Sass/messages.scss
@@ -66,6 +66,7 @@ section#msgIntro {
         max-width: 60%;
         word-wrap: break-word;
         overflow-wrap: break-word;
+        word-break: break-all;
         white-space: normal;
         margin-bottom: 10px;
       }
